Fixed- Arrow moves down when seen on mobile devices

--- a/assets/css/talk-archives.css
+++ b/assets/css/talk-archives.css
@@ -16,10 +16,10 @@
 }
 
 .vid-list-container {
-	width: 92%;
+	width: 85%;
 	overflow: hidden;
 	margin-top: 20px;
-	margin-left:4%;
+	margin:auto;
 	padding-bottom: 20px;
 }
 
@@ -159,17 +159,19 @@
 
 @media (max-width: 624px) {
 	.arrows {
-		position:relative;
+		/* position:relative;
 		margin: 0 auto;
-		width:96px;
+		width:96px; */
 	}
 	.arrow-left {
-		left: 0;
-		top: -20px;
+		left: -22px;
+		top: -150px;
+		float: left;
 	}
 
 	.arrow-right {
-		right: 0;
-		top: -20px;
+		right: -22px;
+		top: -150px;
+		float: right;
 	}
 }
